# nonsible

./: .gitignore  Cargo.toml  README.md  action.yml
.github/: release-drafter.yml
.github/workflows/: build.yml  example-runnin-nonsible-with-secrets.yaml  example-running-nonsible.yml  super-linter.yaml
examples/: apache-tasks.yaml  calling-from.yml  example-hosts.yaml  example-tasks.yaml  file-called.yml  testing-labels.yaml
src/: connection.rs  main.rs  task.rs
src/connection/: utils.rs
