[package]
name = "nonsible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
prettytable-rs = "0.10.0"
clearscreen = "2.0.1"
colored = "2.0.4"
